correction de l’alignement des étoiles et amélioration du responsive mobile avec flex row-reverse+amélioration du index.html pour conformité W3C

--- a/src/pages/Logement.css
+++ b/src/pages/Logement.css
@@ -144,31 +144,28 @@
     padding: 0 20px;
     box-sizing: border-box;
   }
+  @media screen and (max-width: 768px) {
   .right-section {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    margin-top: 10px;
   }
 
   .host {
     display: flex;
     align-items: center;
     gap: 10px;
-  }
-
-  .host img {
-    width: 48px;
-    height: 48px;
-  }
-
-  .host-split p {
-    margin: 0;
+    justify-content: flex-end;
+    margin-top: 10px;
   }
 
   .rating {
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    gap: 0;
   }
+}
 }
